# oddsidizer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: Odds Ladder.json  config.rs  convert.rs  distance.rs  lib.rs  lookup_funcs.rs  lookup_tables.rs  odds.rs  testing_helpers.rs
