[package]
name = "oddsidizer"
version = "0.1.0"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
description = "Rust library for converting betting odds between American, Decimal and Fractional formats"
readme = "README.md"
keywords = ["odds", "betting", "gambling"]
categories = ["mathematics", "value-formatting"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
num-integer = "0.1"
rust_decimal = "1"
rust_decimal_macros = "1"

[features]
default = ["lookup", "fractions_simplify"]
# Use lookup tables first for conversion, then fallback to regular computations
# Noe: When using lookup tables feature, conversion from 1.67 or -150 gives 4/6 instead of 2/3 (see README.md)
lookup = []
# Use more complex algorithm when converting to fractional. (1.33 gives 1/3 instead of 33/100)
# Note that disabling it but leaving lookup enabled will still return 1/3 from the lookup tables (see README.md)
fractions_simplify = []
