[package]
name = "oddsidizer"
version = "0.1.0"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
description = "Rust library for converting betting odds between American, Decimal and Fractional formats"
readme = "README.md"
keywords = ["odds", "betting", "gambling"]
categories = ["mathematics", "value-formatting"]
homepage = "https://github.com/sfisol/oddsidizer"
repository = "https://github.com/sfisol/oddsidizer"
documentation = "https://docs.rs/oddsidizer"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
num-integer = "0.1"
rust_decimal = "1"
rust_decimal_macros = "1"
pretty-readme = "0.1"
